--- a/docs/flash_layout.tex
+++ b/docs/flash_layout.tex
@@ -16,14 +16,14 @@
 
 \begin{document}
 \begin{bytefield}{24}
-	\memsection{ffffff}{0fffff}{10}{Free for user use}\\
+	\memsection{ffffff}{100000}{10}{Free}\\
 	\begin{rightwordgroup}{Slot 3}
 		\memsection{0fffff}{0e0fbc}{3}{Application specific data}\\
 		\memsection{0e0fbb}{0c0000}{4}{Image}
 	\end{rightwordgroup}\\
 	\begin{rightwordgroup}{Slot 2}
 		\memsection{0bffff}{0a0fbc}{3}{Application specific data}\\
-		\memsection{0a0fbb}{040000}{4}{Image}
+		\memsection{0a0fbb}{080000}{4}{Image}
 	\end{rightwordgroup}\\
 	\begin{rightwordgroup}{Slot 1}
 		\memsection{07ffff}{060fbc}{3}{Application specific data}\\
